# ZO4PDE

./: .gitignore  README.md  pyproject.toml
scripts/fully_nonlinear/case1/: gbm_2nodes_v_20d.pt  gbm_2nodes_w_20d.pt  paper_fully_nonlinear_20d.yaml
scripts/hjb/: mean_20d_ms=1.0_vs=2.0_5.pt  paper_hjb_20d.yaml  pi_20d_ms=1.0_vs=2.0_5.pt  var_20d_ms=1.0_vs=2.0_5.pt
scripts/spiky_value/: README.md  replot_spiky_value.py  run_spiky_value.py  spiky_original_payoff.yaml
zeroth/: __init__.py  config.py  data_saver.py  equations.py  evaluate.py  main.py  network.py  solver.py  utils.py
